# Slay-the-Spire

./: CMakeLists.txt  ToDo.txt  main.c
Data/: CardData.txt  EnemyData.txt
include/: CardEffect.h  DataLoader.h  Debug.h  Effect.h  battle.h  game.h
src/: CardEffect.c  DataLoader.c  Debug.c  battle.c  game.c
